<resources>
    <string name="app_name">RoomDBApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_item">Add_item</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="lastname">LastName</string>
    <string name="firstname">FirstName</string>
    <string name="add">Add</string>
    <string name="none">None</string>
    <string name="update">update</string>
    <string name="delete">Delete</string>
</resources>