<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".fragements.update.UpdateFragment">


    <EditText
        android:id="@+id/ufname"
        android:layout_width="277dp"
        android:layout_height="56dp"
        android:layout_marginTop="100dp"
        android:autofillHints="None"
        android:ems="10"
        android:hint="@string/firstname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ulname"
        android:layout_width="284dp"
        android:layout_height="59dp"
        android:layout_marginTop="56dp"
        android:autofillHints="None"
        android:ems="10"
        android:hint="@string/lastname"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ufname" />

    <EditText
        android:id="@+id/uemail"
        android:layout_width="287dp"
        android:layout_height="62dp"
        android:layout_marginTop="48dp"
        android:autofillHints="None"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ulname" />

    <EditText
        android:id="@+id/uphone"
        android:layout_width="285dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:autofillHints="None"
        android:ems="10"
        android:hint="@string/phone"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uemail" />

    <Button
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="56dp"
        android:text="@string/update"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ustate" />

    <Button
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toEndOf="@+id/update_btn"
        app:layout_constraintTop_toBottomOf="@+id/ustate" />

    <EditText
        android:id="@+id/ucity"
        android:layout_width="273dp"
        android:layout_height="50dp"
        android:layout_marginTop="48dp"
        android:ems="10"
        android:hint="city"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uphone" />

    <EditText
        android:id="@+id/ustate"
        android:layout_width="273dp"
        android:layout_height="51dp"
        android:layout_marginTop="64dp"
        android:ems="10"
        android:hint="state"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ucity" />


</androidx.constraintlayout.widget.ConstraintLayout>